@@ -1,3 +1,10 @@
+2010-01-23  Naohiro Aota  <naota@elisp.net>
+
+	* twittering-mode.el (twittering-format-status): Add "original
+	tweet message" format.
+	(twittering-status-format): Add "original tweet message"
+	description.
+
 2010-01-21  Satoshi Yatagawa  <yata_github@y.hauN.org>
 
 	* twittering-mode.el: Add a fail statement to work again under
